# my-sqweel

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  copy-source-to-md.mjs  harness-rules.toml  package-lock.json  package.json  requirements-dev.txt
src/: lib.rs  model.rs
src/schema/: mod.rs
src/server/: debug_http.rs  mod.rs  mysql_wire.rs
src/sql/: mod.rs
src/sql/engine/: compat.rs  ddl.rs  dml.rs  eval.rs  maintenance.rs  mod.rs  query.rs  storage_format.rs  tests.rs  values.rs
src/sql/engine/eval/: common.rs  datetime.rs  json.rs  mod.rs  scalar.rs
src/storage/: mod.rs
tests/: compat_matrix.rs  comprehensive_query_tests.rs  drift_storage.rs  expanded_information_schema.rs  meili_js_client.rs  meili_python_client.rs  mysql_parity.rs  new_features.rs  query_engine.rs  schema_metadata.rs
tests/common/: mod.rs
tests/node/: drizzle-compat.mjs  drizzle-smoke.mjs  meili-js-client-compat.mjs  mysql2-smoke.mjs
tests/python/: meili_client_compat.py
