[package]
name = "my-sqweel"
version = "0.1.0"
edition = "2024"

[lib]
name = "my_sqweel"
path = "src/lib.rs"

[[bin]]
name = "sqwl"
path = "src/bin/sqwl.rs"

[dependencies]
anyhow = "1.0"
axum = "0.8"
bytes = "1.10"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"
fs2 = "0.4"
msql-srv = "0.11"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlparser = "0.53"
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "net", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18", features = ["serde", "v4"] }

# Lux embedded API target from requested branch.
lux = { git = "https://github.com/only-cliches/lux", branch = "embedded-api" }

[dev-dependencies]
mysql = "26.0"
