[package]
name = "my-sqweel"
version = "0.2.3"
edition = "2024"
description = "A schema-drift-tolerant, development-only MySQL facade for fast local iteration."
license = "MIT"
repository = "https://github.com/only-cliches/my-sqweel"
readme = "README.md"
include = [
    "/Cargo.lock",
    "/Cargo.toml",
    "/CHANGELOG.md",
    "/LICENSE",
    "/README.md",
    "/logo.png",
    "/src/**",
    "/tests/**",
]

[lib]
name = "my_sqweel"
path = "src/lib.rs"

[[bin]]
name = "sqwl"
path = "src/bin/sqwl.rs"

[features]
fuzzing = []

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
axum = "0.8"
base64 = "0.22"
bytes = "1.10"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"
fs2 = "0.4"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
hashbrown = "0.14"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
mlua = { version = "0.10", features = ["lua54", "vendored"] }
msql-srv = "0.11"
ordered-float = "4"
parking_lot = "0.12"
rand_core = { version = "0.6", features = ["getrandom"] }
rayon = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rmp = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1_smol = "1"
sha2 = "0.10"
sqlparser = "0.53"
tantivy = "0.26.1"
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }
tokio-tungstenite = "0.24"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18", features = ["serde", "v4"] }

[dev-dependencies]
mysql = "26.0"
